force-app/main/default/objects/QuoteLineItem/fields/Box_Units__c.field-meta.xml
<CustomField>
    <fullName>Box_Units__c</fullName>
    <formula>PricebookEntry.Product2.EMEA_Box_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Box Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>