force-app/main/default/objects/QuoteLineItem/fields/BR_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>BR_Product_Name__c</fullName>
    <formula>PricebookEntry.Product2.Alternate_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BR Product Name</label>
    <type>Text</type>
</CustomField>