force-app/main/default/objects/QuoteLineItem/fields/Case_qty__c.field-meta.xml
<CustomField>
    <fullName>Case_qty__c</fullName>
    <formula>Quantity  /  PricebookEntry.Product2.NACA_Case_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>