force-app/main/default/objects/QuoteLineItem/fields/Discount_Custom__c.field-meta.xml
<CustomField>
    <fullName>Discount_Custom__c</fullName>
    <formula>((  PricebookEntry.UnitPrice  -  UnitPrice )  / PricebookEntry.UnitPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>