force-app/main/default/objects/QuoteLineItem/fields/GPDollar__c.field-meta.xml
<CustomField>
    <fullName>GPDollar__c</fullName>
    <label>GP $</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>