force-app/main/default/objects/QuoteLineItem/fields/GPPercentage__c.field-meta.xml
<CustomField>
    <fullName>GPPercentage__c</fullName>
    <label>GP %</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>