force-app/main/default/objects/QuoteLineItem/fields/IPI__c.field-meta.xml
<CustomField>
    <fullName>IPI__c</fullName>
    <formula>PricebookEntry.Product2.IPI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IPI (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>