force-app/main/default/objects/QuoteLineItem/fields/Price_per_Box__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Box__c</fullName>
    <label>Price per Box</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>