force-app/main/default/objects/QuoteLineItem/fields/Qty_box_Case__c.field-meta.xml
<CustomField>
    <fullName>Qty_box_Case__c</fullName>
    <label>Qty box/Case</label>
    <length>15</length>
    <type>Text</type>
</CustomField>