force-app/main/default/objects/QuoteLineItem/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <precision>17</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>