force-app/main/default/objects/QuoteLineItem/fields/Total_Price_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_With_Tax__c</fullName>
    <formula>(UnitPrice *  Quantity) * (1+ PricebookEntry.Product2.IPI__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>