force-app/main/default/objects/QuoteLineItem/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <formula>Quantity* Box_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>